--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
         <button type="submit">Add book</button>
     </form>
 
+
+    <br>
+    <br>
+    <br>
+
+    <input type="search" name="" id="search">
+
+    <div id="root"></div>
+
     <script src="./scripts/main.js">
 
     </script>
